# TNCG15

./: CMakeLists.txt  README.md
include/: Light.h  Object.h  Scene.cpp  Scene.h  color.h  main.h  ray.h
source/: Light.cpp  Object.cpp  Scene.cpp  main.cpp  ray.cpp
